gen/F1CompilerParser.py
# Generated from C:/Users/berna/Documents/Dev/projects/F1Compiler/src/core/F1Compiler.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class F1CompilerParser ( Parser ):

    grammarFileName = "F1Compiler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'green_light'", "'chequered_flag'", "'laps'", 
                     "'telemetry'", "'steward_decision'", "'compound'", 
                     "'engineer_says'", "'tyre_wear_calc'", "'calc_steering'", 
                     "'deploy_ers'", "'calculate_undercut_delta'", "'if_pitwall_says'", 
                     "'otherwise_box'", "'keep_pushing_while'", "'start_new_stint'", 
                     "'up_to_lap'", "'track_clear'", "'red_flag'", "'slower_than'", 
                     "'faster_than'", "'matched_delta'", "'and_drs_open'", 
                     "'or_box_opposite'", "'telemetry_denies'", "'throttle'", 
                     "'brake'", "'catch_slipstream'", "'in_dirty_air'", 
                     "'='", "';'", "','", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "GREEN_LIGHT", "CHEQUERED_FLAG", "TYPE_LAPS", 
                      "TYPE_TELEMETRY", "TYPE_DECISION", "TYPE_COMPOUND", 
                      "PRINT", "FUNC_WEAR", "FUNC_STEER", "FUNC_ERS", "FUNC_UNDERCUT", 
                      "IF", "ELSE", "WHILE", "FOR", "TO", "TRACK_CLEAR", 
                      "RED_FLAG", "LESS_THAN", "GREATER_THAN", "EQUALS", 
                      "AND", "OR", "NOT", "ADD", "SUB", "MUL", "DIV", "ASSIGN", 
                      "SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "NUM_FLOAT", "NUM_INT", "STRING", "ID", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_declaracion = 2
    RULE_asignacion = 3
    RULE_impresion = 4
    RULE_condicional = 5
    RULE_ciclo = 6
    RULE_tipo = 7
    RULE_expresion = 8
    RULE_llamada_funcion = 9

    ruleNames =  [ "program", "statement", "declaracion", "asignacion", 
                   "impresion", "condicional", "ciclo", "tipo", "expresion", 
                   "llamada_funcion" ]

    EOF = Token.EOF
    GREEN_LIGHT=1
    CHEQUERED_FLAG=2
    TYPE_LAPS=3
    TYPE_TELEMETRY=4
    TYPE_DECISION=5
    TYPE_COMPOUND=6
    PRINT=7
    FUNC_WEAR=8
    FUNC_STEER=9
    FUNC_ERS=10
    FUNC_UNDERCUT=11
    IF=12
    ELSE=13
    WHILE=14
    FOR=15
    TO=16
    TRACK_CLEAR=17
    RED_FLAG=18
    LESS_THAN=19
    GREATER_THAN=20
    EQUALS=21
    AND=22
    OR=23
    NOT=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    ASSIGN=29
    SEMI=30
    COMMA=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    NUM_FLOAT=36
    NUM_INT=37
    STRING=38
    ID=39
    COMMENT=40
    WS=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GREEN_LIGHT(self):
            return self.getToken(F1CompilerParser.GREEN_LIGHT, 0)

        def CHEQUERED_FLAG(self):
            return self.getToken(F1CompilerParser.CHEQUERED_FLAG, 0)

        def EOF(self):
            return self.getToken(F1CompilerParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(F1CompilerParser.StatementContext)
            else:
                return self.getTypedRuleContext(F1CompilerParser.StatementContext,i)


        def getRuleIndex(self):
            return F1CompilerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = F1CompilerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(F1CompilerParser.GREEN_LIGHT)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755871224) != 0):
                self.state = 21
                self.statement()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.match(F1CompilerParser.CHEQUERED_FLAG)
            self.state = 28
            self.match(F1CompilerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(F1CompilerParser.DeclaracionContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(F1CompilerParser.AsignacionContext,0)


        def impresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ImpresionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(F1CompilerParser.CondicionalContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(F1CompilerParser.CicloContext,0)


        def llamada_funcion(self):
            return self.getTypedRuleContext(F1CompilerParser.Llamada_funcionContext,0)


        def SEMI(self):
            return self.getToken(F1CompilerParser.SEMI, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = F1CompilerParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.declaracion()
                pass
            elif token in [39]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.asignacion()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.impresion()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.condicional()
                pass
            elif token in [14, 15]:
                self.enterOuterAlt(localctx, 5)
                self.state = 34
                self.ciclo()
                pass
            elif token in [8, 9, 10, 11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 35
                self.llamada_funcion()
                self.state = 36
                self.match(F1CompilerParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(F1CompilerParser.TipoContext,0)


        def ID(self):
            return self.getToken(F1CompilerParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(F1CompilerParser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(F1CompilerParser.SEMI, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = F1CompilerParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.tipo()
            self.state = 41
            self.match(F1CompilerParser.ID)
            self.state = 42
            self.match(F1CompilerParser.ASSIGN)
            self.state = 43
            self.expresion(0)
            self.state = 44
            self.match(F1CompilerParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(F1CompilerParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(F1CompilerParser.ASSIGN, 0)

        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)


        def SEMI(self):
            return self.getToken(F1CompilerParser.SEMI, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = F1CompilerParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(F1CompilerParser.ID)
            self.state = 47
            self.match(F1CompilerParser.ASSIGN)
            self.state = 48
            self.expresion(0)
            self.state = 49
            self.match(F1CompilerParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(F1CompilerParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(F1CompilerParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(F1CompilerParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(F1CompilerParser.SEMI, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_impresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImpresion" ):
                listener.enterImpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImpresion" ):
                listener.exitImpresion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImpresion" ):
                return visitor.visitImpresion(self)
            else:
                return visitor.visitChildren(self)




    def impresion(self):

        localctx = F1CompilerParser.ImpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_impresion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(F1CompilerParser.PRINT)
            self.state = 52
            self.match(F1CompilerParser.LPAREN)
            self.state = 53
            self.expresion(0)
            self.state = 54
            self.match(F1CompilerParser.RPAREN)
            self.state = 55
            self.match(F1CompilerParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(F1CompilerParser.IF, 0)

        def LPAREN(self):
            return self.getToken(F1CompilerParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(F1CompilerParser.RPAREN, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(F1CompilerParser.LBRACE)
            else:
                return self.getToken(F1CompilerParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(F1CompilerParser.RBRACE)
            else:
                return self.getToken(F1CompilerParser.RBRACE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(F1CompilerParser.StatementContext)
            else:
                return self.getTypedRuleContext(F1CompilerParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(F1CompilerParser.ELSE, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = F1CompilerParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(F1CompilerParser.IF)
            self.state = 58
            self.match(F1CompilerParser.LPAREN)
            self.state = 59
            self.expresion(0)
            self.state = 60
            self.match(F1CompilerParser.RPAREN)
            self.state = 61
            self.match(F1CompilerParser.LBRACE)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755871224) != 0):
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(F1CompilerParser.RBRACE)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 69
                self.match(F1CompilerParser.ELSE)
                self.state = 70
                self.match(F1CompilerParser.LBRACE)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755871224) != 0):
                    self.state = 71
                    self.statement()
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 77
                self.match(F1CompilerParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(F1CompilerParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(F1CompilerParser.LPAREN, 0)

        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)


        def RPAREN(self):
            return self.getToken(F1CompilerParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(F1CompilerParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(F1CompilerParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(F1CompilerParser.StatementContext)
            else:
                return self.getTypedRuleContext(F1CompilerParser.StatementContext,i)


        def FOR(self):
            return self.getToken(F1CompilerParser.FOR, 0)

        def asignacion(self):
            return self.getTypedRuleContext(F1CompilerParser.AsignacionContext,0)


        def TO(self):
            return self.getToken(F1CompilerParser.TO, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_ciclo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCiclo" ):
                listener.enterCiclo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCiclo" ):
                listener.exitCiclo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCiclo" ):
                return visitor.visitCiclo(self)
            else:
                return visitor.visitChildren(self)




    def ciclo(self):

        localctx = F1CompilerParser.CicloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ciclo)
        self._la = 0 # Token type
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(F1CompilerParser.WHILE)
                self.state = 81
                self.match(F1CompilerParser.LPAREN)
                self.state = 82
                self.expresion(0)
                self.state = 83
                self.match(F1CompilerParser.RPAREN)
                self.state = 84
                self.match(F1CompilerParser.LBRACE)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755871224) != 0):
                    self.state = 85
                    self.statement()
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 91
                self.match(F1CompilerParser.RBRACE)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(F1CompilerParser.FOR)
                self.state = 94
                self.match(F1CompilerParser.LPAREN)
                self.state = 95
                self.asignacion()
                self.state = 96
                self.match(F1CompilerParser.TO)
                self.state = 97
                self.expresion(0)
                self.state = 98
                self.match(F1CompilerParser.RPAREN)
                self.state = 99
                self.match(F1CompilerParser.LBRACE)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 549755871224) != 0):
                    self.state = 100
                    self.statement()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.match(F1CompilerParser.RBRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_LAPS(self):
            return self.getToken(F1CompilerParser.TYPE_LAPS, 0)

        def TYPE_TELEMETRY(self):
            return self.getToken(F1CompilerParser.TYPE_TELEMETRY, 0)

        def TYPE_DECISION(self):
            return self.getToken(F1CompilerParser.TYPE_DECISION, 0)

        def TYPE_COMPOUND(self):
            return self.getToken(F1CompilerParser.TYPE_COMPOUND, 0)

        def getRuleIndex(self):
            return F1CompilerParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = F1CompilerParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return F1CompilerParser.RULE_expresion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NotExpContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a F1CompilerParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(F1CompilerParser.NOT, 0)
        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotExp" ):
                listener.enterNotExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotExp" ):
                listener.exitNotExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotExp" ):
                return visitor.visitNotExp(self)
            else:
                return visitor.visitChildren(self)


    class AndExpContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a F1CompilerParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(F1CompilerParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,i)

        def AND(self):
            return self.getToken(F1CompilerParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExp" ):
                listener.enterAndExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExp" ):
                listener.exitAndExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExp" ):
                return visitor.visitAndExp(self)
            else:
                return visitor.visitChildren(self)


    class RelacionalExpContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a F1CompilerParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(F1CompilerParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,i)

        def LESS_THAN(self):
            return self.getToken(F1CompilerParser.LESS_THAN, 0)
        def GREATER_THAN(self):
            return self.getToken(F1CompilerParser.GREATER_THAN, 0)
        def EQUALS(self):
            return self.getToken(F1CompilerParser.EQUALS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelacionalExp" ):
                listener.enterRelacionalExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelacionalExp" ):
                listener.exitRelacionalExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelacionalExp" ):
                return visitor.visitRelacionalExp(self)
            else:
                return visitor.visitChildren(self)


    class IdLiteralContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a F1CompilerParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(F1CompilerParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdLiteral" ):
                listener.enterIdLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdLiteral" ):
                listener.exitIdLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdLiteral" ):
                return visitor.visitIdLiteral(self)
            else:
                return visitor.visitChildren(self)


    class FloatLiteralContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a F1CompilerParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM_FLOAT(self):
            return self.getToken(F1CompilerParser.NUM_FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloatLiteral" ):
                listener.enterFloatLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloatLiteral" ):
                listener.exitFloatLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatLiteral" ):
                return visitor.visitFloatLiteral(self)
            else:
                return visitor.visitChildren(self)


    class ParentesisExpContext(ExpresionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a F1CompilerParser.ExpresionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(F1CompilerParser.LPAREN, 0)
        def expresion(self):
            return self.getTypedRuleContext(F1CompilerParser.ExpresionContext,0)

        def RPAREN(self):
            return self.getToken(F1CompilerParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentesisExp" ):
                listener.enterParentesisExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentesisExp" ):
                listener.exitParentesisExp(self)
